--- a/apps/style.css
+++ b/apps/style.css
@@ -66,7 +66,7 @@ body {
     height: 100vh;
 }
 .backg-1 {
-    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(./svg/banner.png);
+    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/banner.png);
     background-size: cover;
     position: relative;
     height: 10em;
