--- a/apps/media.css
+++ b/apps/media.css
@@ -8,10 +8,10 @@
     }
 
     .container {
-        width: 100%;
+        width: 92%;
         height: 90em;
         display: grid;
-        margin-bottom: 0px;
+        margin-bottom: 5px;
         gap: 0px;
         align-content: center;
         justify-content: center;
@@ -20,27 +20,175 @@
         overflow-x: scroll;
     }
 
+    .container h1 {
+        color: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%));
+    
+    }
+    .container header {
+        display: grid;
+        grid-template-columns: 1fr 50px;
+        margin-top: 20px;
+        overflow: hidden;
+    }
+    
+    .container header .shopping {
+        position: relative;
+        text-align: right;
+    }
+    .shopping i {
+        font-size: 3rem;
+        color: lighten(black, 25%) ;
+        cursor: pointer;
+        transition: all 0.45s ease;
+        -webkit-transition: all 0.45s ease;
+        -moz-transition: all 0.45s ease;
+        -ms-transition: all 0.45s ease;
+        -o-transition: all 0.45s ease;
+    }
+    
+    .shopping i:hover {
+        color: #40a5ee2f ;
+    }
+    
+    .shopping span {
+        background-color: red;
+        border-radius: 50% 50%;
+        -webkit-border-radius: 50% 50%;
+        -moz-border-radius: 50% 50%;
+        -ms-border-radius: 50% 50%;
+        -o-border-radius: 50% 50%;
+        display: flex;
+        justify-content: center;
+        color: #fff;
+        position: relative;
+        top: -35px;
+        left: 94%;
+        padding: 1px 6px;
+        margin: -7px 7px;
+        align-items: center;
+        align-content: center;
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+    
+
     .list {
-        width: 100%;
+        width: 98%;
         height: fit-content;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 7px;
+        gap: 15px;
         margin-top: 20px;
-        justify-content: space-around;
+        margin-bottom: 10px;
+        justify-content: space-evenly;
+        overflow: scroll;
+        align-content: space-around;
         align-items: center;
         justify-items: center;
-        /* overflow: scroll; */
     }
 
+    .card {
+        position: fixed;
+        top: 0;
+        right: 100%;
+        width: 482px;
+        /* right: 288px; */
+        background-color: #e2dfdf00;
+        border-left: 4px solid black;
+        height: 100vh;
+        z-index: 1;
+        transition: 0.5s;
+        -webkit-transition: 0.1s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+    }
+
+    .active .card {
+        right: calc(100% - 477px);
+        color: revert-layer;
+        background-color: #3434b1;
+    }
+    
+    .active .container {
+        transform: translateX(+200px);
+        -webkit-transform: translateX(+200px);
+        -moz-transform: translateX(+200px);
+        -ms-transform: translateX(+200px);
+        -o-transform: translateX(+200px);
+    }
+    
+    .card h1 {
+        position: relative;
+        background-color: #35ab89;
+        color: #000;
+        font-weight: 600;
+        margin: 0 1px;
+        padding: 0px 28px;
+        height: 15%;
+        display: flex;
+        align-items:center;
+        align-content: center;
+    }
+    
+    .card .checkOut {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: stretch;
+        justify-content: space-around;
+        align-content: center;
+    }
+    
+    .checkOut p {
+        display: flex;
+        font-weight: bold;
+        border-bottom: 4px solid rgb(200, 200, 200);
+        padding: 0px 10px 10px 10px;
+        flex-direction: row;
+        color: aliceblue;
+        flex-wrap: wrap;
+        align-content: space-between;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .check-out span {
+        font-weight: 100;
+    }
+    
+    .card .checkOut div {
+        background-color: #40a6ee;
+        color: #000;
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        font-weight: bold;
+        cursor: pointer;
+        border-bottom: 1px red solid;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-content: space-between;
+    }
+    
+    .card .checkOut div:nth-child(2) {
+        background-color: black;
+        color: #fff;
+    }
+    
+
     .list .item {
-        width: 80%;
-        height: 16em;
+        width: 90%;
+        height: 15em;
         text-align: center;
-        background-color: #efefef;
-        padding: 25px;
-        margin-bottom: 10px;
-        box-shadow: 0 50px 50px #757676;
+        background-color: #e2dfdf0a;
+        padding: 20px;
+        margin-bottom: 0px;
+        box-shadow: 0px 3px 74px 16px #757676;
         letter-spacing: 2px;
         /* overflow: scroll; */
     }
@@ -50,8 +198,9 @@
     }
     
     .list .item img {
-        width: 100%;
-        height: 125px;
+        width: 111%;
+        margin: -24px -5px;
+        height: 150px;
     }
 
     .list .item .title {
@@ -112,5 +261,10 @@
     .listCard li img {
         width: 90%;
     }
+
+
+    
+
+
     
 }
