--- a/apps/style.css
+++ b/apps/style.css
@@ -1,4 +1,4 @@
-@import url(../media.css);
+@import url(./media.css);
 /* @import url(<script src="./app1.js"></script>); */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
@@ -101,22 +101,23 @@ body {
     justify-content: space-between;
 }
 .section {
-    background-color: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/banner.png);
     font-family: 'montserrat' ,sans-serif;
     width: 100%;
     height: 100vh;
-    top: 0;
+    /* top: 0; */
     height: fit-content;
     /* color:  linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)); */
     overflow: hidden;
 }
 .container {
-    background-color: darkslategray;
+    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/background.jpg);
+    background-size: cover;
     position: relative;
     width: 100%;
     min-height: 400px;
-    margin-bottom: 100px;
-    margin: auto;
+    /* margin-bottom: 100px; */
+    /* margin: auto; */
     transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
@@ -191,7 +192,7 @@ body {
     position: fixed;
     top: 0;
     right: 100%;
-    width: 503px;
+    width: 506px;
     background-color: #e2dfdf00;
     border-left: 1px solid black;
     height: 100vh;
@@ -206,7 +207,7 @@ body {
 .active .card {
     right: calc(100% - 500px);
     color: revert-layer;
-    background-color: #3434b1;
+    background-color: rgb(90 19 21 / 44%);
 }
 
 .active .container {
@@ -280,21 +281,22 @@ body {
 }
 
 .list .item {
-    width: 100%;
+    width: 90%;
     height: 26em;
     border-radius: 50% 50%;
     text-align: center;
-    background-color: #efefef;
+    background-color: rgb(200 200 200 / 0%);
     padding: 25px;
-    box-shadow: 0 50px 50px  #757676;
+    box-shadow: 7px 9px 50px #757676;
     letter-spacing: 2px;
+    z-index: 2;
     transition: all 0.25s ease;
     -webkit-transition: all 0.25s ease;
     -moz-transition: all 0.25s ease;
     -ms-transition: all 0.25s ease;
     -o-transition: all 0.25s ease;
-    border-radius: 30px;
-    /* -webkit-border-radius: 30px; */
+    border-radius: 50px;
+    -webkit-border-radius: 30px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
@@ -307,7 +309,7 @@ body {
 
 .list .item img {
     width: 100%;
-    height: 200px;
+    height: 230px;
 }
 
 .list .item .title {
@@ -463,6 +465,7 @@ body {
     .list .item img {
         width: 100%;
         /* height: 250px; */
+        aspect-ratio: 6/5;
     }
 
     .list .item button {
