--- a/apps/style.css
+++ b/apps/style.css
@@ -9,7 +9,33 @@
     font-family: 'Ruwudu', serif;
 }
 
-.header {
+:root{
+    --art-color:linear-gradient(rgba(4, 9, 20, 0.8), rgba(4, 9, 20, 0.8));
+    --min-color:rgb(192, 192, 192);
+    --background-color:linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
+    --scandriy-color:linear-gradient(to top, #979797 0%, #b0b4bc 52%, #9c9999 100%);;
+    --terdriy-color:#C9CCD3;
+    --fordiry-color:#dd3544;
+}
+body {
+    background-color:var(--min-color);
+    width: 100%;
+    height: 100vh;
+}
+
+.logo {
+    width: 20px;
+    background-color: #000;
+}
+
+.py {
+    background-color: var(--terdriy-color);
+    
+}
+
+
+
+/* .header {
     width: 100%;
     overflow: hidden;
     height: 150px;
@@ -26,11 +52,11 @@
     border-bottom: #000 5px solid;
     align-content: center;
     align-items: center;
-}
+} */
 .icon1 {
     margin: 7px 10px 56px 23px;
     /* height: 50px; */
-    background-color: linear-gradient(rgba(4, 9, 20, 0.8), rgba(4, 9, 20, 0.8));
+    background-color: ver(--art-color);
     background-position: right;
     /* background-size: 10px 15px; */
     width: 7%;
@@ -60,16 +86,12 @@
     -ms-border-radius: #000 2px solid;
     -o-border-radius: #000 2px solid;
 }
-body {
-    background-color: #a253eb00;
-    width: 100%;
-    height: 100vh;
-}
+
 .backg-1 {
     background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/banner.png);
     background-size: cover;
     position: relative;
-    height: 10em;
+    height: 15em;
     border-bottom: #000 5px solid;
     z-index: 0;
     width: 100%;
@@ -96,34 +118,37 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 14vh;
+    height: 14em;
     align-content: space-between;
     justify-content: space-between;
 }
+.iv {
+    text-align: center;
+}
 .section {
-    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/banner.png);
+    /* background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/banner.png); */
     font-family: 'montserrat' ,sans-serif;
+    position: absolute;
     width: 100%;
-    height: 100vh;
+    background-color:var(--min-color);
     /* top: 0; */
-    height: fit-content;
     /* color:  linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)); */
     overflow: hidden;
 }
 .container {
-    background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/background.jpg);
+    /* background-image: linear-gradient(rgb(4 9 30 / 19%), rgb(4 9 30 / 31%)), url(../svg/background.jpg); */
     background-size: cover;
     position: relative;
+    background-color: var(--scandriy-color);
     width: 100%;
-    min-height: 400px;
-    /* margin-bottom: 100px; */
-    /* margin: auto; */
+    height: auto;
+    padding: 0px 15px;
     transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .container h1 {
@@ -133,7 +158,8 @@ body {
 .container header {
     display: grid;
     grid-template-columns: 1fr 50px;
-    margin-top: 20px;
+    margin-top: 10px;
+    height: 70px;
     overflow: hidden;
 }
 
@@ -151,13 +177,16 @@ body {
     -ms-transition: all 0.45s ease;
     -o-transition: all 0.45s ease;
 }
+*, ::before, ::after {
+    box-sizing: border-box;
+  }
 
 .shopping i:hover {
     color: #40a5ee2f ;
 }
 
 .shopping span {
-    background-color: red;
+    background-color:var(--fordiry-color);
     border-radius: 50% 50%;
     -webkit-border-radius: 50% 50%;
     -moz-border-radius: 50% 50%;
@@ -180,19 +209,22 @@ body {
 .list {
     display: grid;
     grid-template-columns: repeat(3, 2fr);
-    gap: 25px;
+    gap: 4%;
     margin-bottom: 40px;
     margin-top: 0px;
     justify-content: space-around;
+    background-color: var(--terdriy-color);
     align-items: center;
     justify-items: center;
+    height: 1200px;
+    
 }
 
-.card {
+.card-1 {
     position: fixed;
     top: 0;
     right: 100%;
-    width: 506px;
+    width: 100%;
     background-color: #e2dfdf00;
     border-left: 1px solid black;
     height: 100vh;
@@ -204,10 +236,10 @@ body {
     -o-transition: 0.5s;
 }
 
-.active .card {
-    right: calc(100% - 500px);
+.active .card-1 {
+    right: calc(100% - 100%);
     color: revert-layer;
-    background-color: rgb(90 19 21 / 44%);
+    background-color: var(--min-color);
 }
 
 .active .container {
@@ -218,9 +250,9 @@ body {
     -o-transform: translateX(+200px);
 }
 
-.card h1 {
+.card-1 h1 {
     position: relative;
-    background-color: #35ab89;
+    background-color:var(--terdriy-color);
     color: #000;
     font-weight: 600;
     margin: 0 1px;
@@ -231,7 +263,7 @@ body {
     align-content: center;
 }
 
-.card .checkOut {
+.card-1 .checkOut {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -259,7 +291,7 @@ body {
     font-weight: 100;
 }
 
-.card .checkOut div {
+.card-1 .checkOut div {
     background-color: #40a6ee;
     color: #000;
     width: 100%;
@@ -275,73 +307,86 @@ body {
     align-content: space-between;
 }
 
-.card .checkOut div:nth-child(2) {
+.card-1 .checkOut div:nth-child(2) {
     background-color: black;
     color: #fff;
 }
 
 .list .item {
-    width: 90%;
-    height: 26em;
-    border-radius: 50% 50%;
+    width: 105%;
+    height: 22em;
+    border-radius: 10px;
     text-align: center;
     background-color: rgb(200 200 200 / 0%);
-    padding: 25px;
-    box-shadow: 7px 9px 50px #757676;
+    padding: 10px;
+    box-shadow: inset 7px 9px 50px #fffffffd;
     letter-spacing: 2px;
     z-index: 2;
+    background-color: #fff;
     transition: all 0.25s ease;
     -webkit-transition: all 0.25s ease;
     -moz-transition: all 0.25s ease;
     -ms-transition: all 0.25s ease;
     -o-transition: all 0.25s ease;
-    border-radius: 50px;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
     cursor: pointer;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 .list .item:hover {
-    background-color: #77abcf63;
+    background-color: #eeeeee;
 }
 
 .list .item img {
     width: 100%;
-    height: 230px;
+    height: 70%;
 }
 
 .list .item .title {
     font-weight: 900;
     font-size: larger;
+    color: var(--scandriy-color);
 
+}
+.list .item .cash {
+    /* position: relative; */
+    margin: 1px 10px;
+   
+    
+    color: var(--scandriy-color);
 }
 
 .list .item .price {
-    margin: 12px;
+    margin: 5px 4px;
+    letter-spacing: 2px;
+    padding: 2px;
+    display: ruby-text;   
+    color: var(--scandriy-color);
+   
 }
 
 .list .item:hover .total{
     color: #efefef;
 }
 .list .item:hover .price{
-    color: #000;
+    color: var(--scandriy-color);
 }
 
 .list .item button{
     background-color: #dadada;
     color: #757676;
-    font-size: 1rem;
-    font-weight: 500;
-    width: 60%;
-    padding: 10px;
+    font-size: 0.7rem;
+    font-weight: 900;
+    width: 50%;
+    padding: 3px;
     border: 2px solid #757676;
-    border-radius: 50px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
     cursor: pointer;
     transition: all 0.25s ease;
     -webkit-transition: all 0.25s ease;
@@ -365,6 +410,10 @@ body {
     display: flex ;
     justify-content: center;
     align-items: center;
+    letter-spacing: 2px;
+    color: #000;
+    background-color: #fff;
+    
 }
  
 .listCard li img {
@@ -373,17 +422,22 @@ body {
 
 .listCard .count {
     margin: 2px 13px;
+    font-size: 1.5rem;
     color: #000;
 }
 
 .cardTitle,
 .cardPrice{
     color: #000;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    width: 20%;
 }
 
 .cardButton {
-    width: 28px;
-    height: 28px;
     color: #efefef;
     font-size: 1.5rem;
     font-weight: 500;
@@ -398,94 +452,24 @@ body {
     cursor: pointer;
 }
 
+section.active .listCard li div button {
+    width: 20px;
+    border-radius: 68%;
+}
 
 
+
+/* 
 .footer-1 {
+    position: absolute;
     width: 100%;
-    min-height: 12em;
+    min-height: 8em;
+    color: antiquewhite;
+    bottom: 0;
+    z-index: 100;
     background-color: #000;
     border-bottom: #641717 5px solid;
-}
+} */
 
 
 
-
-/* MADIA QUERIES */
-@media (max-width: 768px) {
-    .section {
-        width: 100%;
-        overflow: hidden;
-        /* height: 1000px; */
-        /* display: block; */
-        overflow: hidden;
-    }
-
-    .container {
-        margin: 2px 20px;
-        width: 100%;
-        scroll-behavior: smooth;
-        cursor: pointer;
-        z-index: 1;
-        display: grid;
-        overflow: hidden;
-        align-content: center;
-        justify-content: center;
-        align-items: center;
-        justify-items: stretch;
-    }
-
-    .list {
-        width: 100%;
-        /* height: 1065px; */
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 30px 3px;
-        margin-top: 5px;
-        margin-bottom: 15px;
-        overflow: hidden;
-        align-items: center;
-        justify-items: center;
-        /* justify-content: center; */
-        /* align-content: center; */
-        padding: 5px  5px;
-        cursor: pointer;
-        scrollbar-width: none;
-    }
-
-    .list .item {
-        width: 70%;
-        top: 110;
-        text-align: center;
-        background-color: #efefef;
-        padding: 10px;
-        box-shadow: 20px -2px 50px #757676;
-        letter-spacing: 2px;
-    }
-
-    .list .item img {
-        width: 100%;
-        /* height: 250px; */
-        aspect-ratio: 6/5;
-    }
-
-    .list .item button {
-        background-color: #dadada;
-        color: #757676;
-        font-size: 8px;
-        font-weight: bold;
-        width: 65%;
-        padding: 2px;
-        border: 5px solid #757676;
-        border-radius: 50px;
-        -webkit-border-radius: 41px;
-        -moz-border-radius: 50px;
-        -ms-border-radius: 50px;
-        -o-border-radius: 50px;
-        cursor: pointer;
-        transition: all 0.25s ease;
-        -webkit-transition: all 0.25s ease;
-        -moz-transition: all 0.25s ease;
-        -ms-transition: all 0.25s ease;
-        -o-transition: all 0.25s ease;
-    }
-}
